<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/dialog_body">

    <TextView
        android:id="@+id/label_felicidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/msj_felicidades"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_felicidades_continuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_felicidades"
        android:paddingTop="@dimen/padding_between"
        android:text="@string/msj_terminastes"
        android:textAlignment="center"
        android:textSize="24sp" />

    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/iv_medalla_dialogo"
        android:layout_width="match_parent"
        android:contentDescription="@string/descripcion_imagen_dialogo"
        android:layout_below="@+id/label_felicidades_continuacion"
        app:srcCompat="@drawable/ic_medalla"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_continuar_nivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="@string/continuar"
        android:textColor="@android:color/white" />
</RelativeLayout>
