<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_ejercicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:weightSum="1"
    android:background="@color/colorPrimary_alpha"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cv_ejercicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight=".2"
        tools:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry,UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_cv_bloqueado"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:tint="@color/color_familia"
                tools:ignore="ContentDescription"
                app:srcCompat="@drawable/ic_bloqueado" />

            <TextView
                android:id="@+id/tv_cv_ejercicio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/plantilla_vocal"
                android:textAlignment="center"
                android:textSize="150sp" />

            <TextView
                android:id="@+id/tv_etiempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@color/color_lugares"
                android:layout_margin="5dp"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/iv_ejercicio_item_ejercicio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center_horizontal|center_vertical"
                app:srcCompat="@drawable/ic_menu_guia_padre_technology"
                android:contentDescription="@string/descripcion_imagen_temporizador"
                android:visibility="invisible" />



        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_controles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".8"
        card_view:cardElevation="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="6dp"
        android:layout_marginLeft="6dp"
        >

        <LinearLayout
            android:id="@+id/ll_controles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/fab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/boton_administrador"
                android:clickable="true"
                android:contentDescription="@string/descripción_play_musica"
                android:padding="16dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                card_view:srcCompat="@drawable/ic_play"
                android:layout_gravity="center_horizontal|center_vertical" />

            <ImageButton
                android:id="@+id/Ibtn_cv_ejercicio_siguiente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/descripcion_siguiente"
                card_view:srcCompat="@drawable/ic_siguiente"
                android:visibility="invisible"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>